@@ -13,7 +13,7 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" type="text/css" href="../sample.css"/>
-    <link rel="stylesheet" type="text/css" href="codemirror・lib/codemirror.css"/>
+    <link rel="stylesheet" type="text/css" href="codemirror/lib/codemirror.css"/>
     <title>INTER-Mediator - Sample - Authorized Chat / MySQL</title>
     <script type="text/javascript" src="include_MySQL.php"></script>
     <script type="text/javascript" src="codemirror/lib/codemirror.js"></script>
